@@ -1,3 +1,9 @@
+2007-02-16  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR fortran/30779
+	* scanner.c (gfc_next_char_literal): Add check for end of file after
+	call to advance_line.
+
 2007-02-16  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/30512
